--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Extract docker.io images label
         id: docker
         run: |
-          echo ::set-output name=tags::docker.io/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          echo "tags=docker.io/${{ env.IMAGE_NAME }}:${{ github.ref_name }}" >> $GITHUB_OUTPUT
 
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -88,26 +88,9 @@ jobs:
           gzipname=$(echo ${{ env.IMAGE_NAME }} | sed "s?/?-?g")-${{ github.ref_name }}.tar.gz
           docker pull ${image}
           docker save ${image} | gzip > ${gzipname}
-          echo ::set-output name=gzipname::${gzipname}
-          
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: true
+          echo "gzipname=${gzipname}" >> $GITHUB_OUTPUT
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: GH Release
+        uses: softprops/action-gh-release@v0.1.15
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./${{ steps.pull_image.outputs.gzipname }}
-          asset_name: ${{ steps.pull_image.outputs.gzipname }}
-          asset_content_type: application/gzip
+          files: ${{ steps.pull_image.outputs.gzipname }}
